[package]
name = "percolator-match"
version = "0.2.0"
edition = "2021"
description = "Passive LP + vAMM matcher for Percolator CPI — forked from aeyakovenko/percolator-match with skew-aware inventory, insurance fee routing, and Kani proofs"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
custom-heap = []
custom-panic = []

[dependencies]
solana-program = "2.0"

[dev-dependencies]
