[package]
name = "percolator-match"
version = "0.2.0"
edition = "2021"
description = "Passive LP + vAMM matcher for Percolator CPI — forked from aeyakovenko/percolator-match with skew-aware inventory, insurance fee routing, and Kani proofs"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
custom-heap = []
custom-panic = []

[dependencies]
solana-program = "2.0"
# blake3 >=1.8.2 bumped constant_time_eq to ^0.4 which requires Cargo edition
# 2024, breaking cargo build-sbf on toolchain 1.84.0. Pin blake3 to =1.8.1
# (uses constant_time_eq ^0.3.1) until the SBF toolchain catches up.
blake3 = "=1.8.1"
# serde_json required by src/bin/sdk_parity_fixtures.rs (parity fixture binary)
serde_json = "1"

[dev-dependencies]

[lints.rust]
# kani cfg is set by the Kani model-checker harness; not a normal rustc cfg
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(target_os, values("solana"))'] }
